--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -38,9 +38,10 @@
        height: 2.2rem;
     }
 
-    &__input:active {
+    &__input:focus {
         outline: none;
     }
+   
 
     &__list {
         display: none;
